# TestHome

./: .gitignore
InflightFlow/: .gitignore  CONTRIBUTING.md  README.md
InflightFlow/docs/: BACKLOG_SPRINT0.md  BOOTSTRAP.md  HARDWARE_BASELINE.md  M1_PROGRESS.md  REFERENCE_SPEC.md  ROADMAP.md  SENSOR_MODULE.md  SENSOR_RUNBOOK.md  TECH_STACK.md
InflightFlow/infra/: docker-compose.yml
InflightFlow/scripts/: start_core_and_operator.ps1
InflightFlow/tmp_pack/: core.tar
apps/core/: .env.example  go.mod  go.sum
apps/operator/: index.html  (+4 more)
docs/: BACKLOG_SPRINT0.md  BOOTSTRAP.md  HARDWARE_BASELINE.md  REFERENCE_SPEC.md  SENSOR_RUNBOOK.md  TECH_STACK.md
draw_generators_app/: DrawGenerators.cfg  README.md  config.py  main.py  requirements.txt
flyer_generators_app/: FlyerGenerators — копия.cfg  FlyerGenerators.cfg  README.md  config.py  main.py  requirements.txt
inFight_pi_snapshot/: ARCHITECTURE_BLUEPRINT.md  DB_MIGRATION_2_STAGE_PLAN.md  HARDWARE_INTEGRATION.md  PROJECT_OVERVIEW.md  README_LOCAL.md  SYNC_BASELINE_2026-05-24.md  manifest.json
plant_care_app/: .gitignore  README.md  data.json  main.py  requirements.txt
scripts/: build_lan_clients.ps1  deploy_core_to_pi.ps1  inflightflow-deploy.remote.sh  run_operator.ps1  run_operator_and_spectator.ps1  run_spectator.ps1  start_operator_and_spectator.ps1
tmp_cross_src/jsm.crossing-detector-front/: CMakeLists.txt
tmp_cross_src/jsm.crossing-detector-front/CrossingReader/: crossing.cpp  crossings.h
tmp_cross_src/jsm.crossing-detector-front/Web/: web.cpp
video_portal_starter/: README.md  docker-compose.yml
(+691 files in other folders)
